# chatroom

./: .gitignore  README.md  amvera.yml  pyproject.toml  requirements.txt  start_server.py
chatroom/: __init__.py  auth.py  chat.py  models.py
chatroom/static/: style.css
chatroom/templates/: base.html  index.html  room.html
src/: __init__.py  app.py  chat.py  db_create.py  main.py
src/templates/: base.html  room.html
tests/: test_chatroom.py
